Back button queue: ArrayList -> ArrayDeque
Fix console logger